# doodle_test

./: CMakeLists.txt  README.md
src/: Settings.h  main.cpp
src/camera/: Camera.cpp  Camera.h
src/entities/: HorizontalTile.cpp  HorizontalTile.h  Player.cpp  Player.h  StaticTile.cpp  StaticTile.h  TemporaryTile.cpp  TemporaryTile.h  Tile.cpp  Tile.h  VerticalTile.cpp  VerticalTile.h
src/entities/bonus/: Jetpack.cpp  Jetpack.h  Spring.cpp  Spring.h
src/factory/: AbstractFactory.cpp  AbstractFactory.h  ConcreteFactory.cpp  ConcreteFactory.h
src/game/: Game.cpp  Game.h  GameController.cpp  GameController.h
src/utils/: Helpers.cpp  Helpers.h  Random.cpp  Random.h  ScoreDisplay.cpp  ScoreDisplay.h  ScoreTracker.cpp  ScoreTracker.h  Stopwatch.cpp  Stopwatch.h
src/view/: PlayerView.cpp  PlayerView.h  TileView.cpp  TileView.h
src/view/bonusView/: JetpackView.cpp  JetpackView.h  SpringView.cpp  SpringView.h
src/world/: World.cpp  World.h
